@@ -78,7 +78,8 @@ class K3bCdImageWritingDialog::Private
 {
 public:
   Private()
-    : md5SumItem(0) {
+    : md5SumItem(0),
+      imageForced( false ) {
   }
 
   K3bListViewItem* md5SumItem;
@@ -99,6 +100,8 @@ public:
   QWidget* tempPathTab;
   bool advancedTabVisible;
   bool tempPathTabVisible;
+
+  bool imageForced;
 };
 
 
@@ -148,13 +151,15 @@ K3bCdImageWritingDialog::~K3bCdImageWritingDialog()
 
 void K3bCdImageWritingDialog::init()
 {
-  // when opening the dialog first the default settings are loaded and afterwards we set the 
-  // last written image because that's what most users want
-  KConfig* c = k3bcore->config();
-  c->setGroup( configGroup() );
-  QString image = c->readPathEntry( "last written image" );
-  if( QFile::exists( image ) )
-    m_editImagePath->setURL( image );
+  if( !d->imageForced ) {
+    // when opening the dialog first the default settings are loaded and afterwards we set the 
+    // last written image because that's what most users want
+    KConfig* c = k3bcore->config();
+    c->setGroup( configGroup() );
+    QString image = c->readPathEntry( "last written image" );
+    if( QFile::exists( image ) )
+      m_editImagePath->setURL( image );
+  }
 }
 
 
@@ -240,7 +245,7 @@ void K3bCdImageWritingDialog::setupGui()
   pixLabel->setScaledContents( false );
   m_spinCopies = new QSpinBox( groupCopies );
   m_spinCopies->setMinValue( 1 );
-  m_spinCopies->setMaxValue( 99 );
+  m_spinCopies->setMaxValue( 999 );
   // -------- copies
 
   QGroupBox* optionGroup = new QGroupBox( 3, Vertical, i18n("Options"), optionTab );
@@ -787,6 +792,7 @@ void K3bCdImageWritingDialog::slotToggleAll()
 
 void K3bCdImageWritingDialog::setImage( const KURL& url )
 {
+  d->imageForced = true;
   m_editImagePath->setURL( url.path() );
 }
 
